--- a/src/renderer/account/components/AccountPanel/Holdings/HoldingsLoading/HoldingsLoading.scss
+++ b/src/renderer/account/components/AccountPanel/Holdings/HoldingsLoading/HoldingsLoading.scss
@@ -1,4 +1,10 @@
 .holdingsLoading {
+  h2 {
+    margin: 0 0 25px;
+    color: $primary-text-color;
+    font-size: 18px;
+    font-weight: 500;
+  }
 
   .holding {
     display: flex;
@@ -11,7 +17,13 @@
     animation-name: loadingShimmer;
     animation-timing-function: linear;
     background: $content-bg-color;
-    background-image: linear-gradient(to right, $content-bg-color 0%, #E3E4EA 20%, $content-bg-color 40%, $content-bg-color 100%);
+    background-image: linear-gradient(
+      to right,
+      $content-bg-color 0%,
+      #e3e4ea 20%,
+      $content-bg-color 40%,
+      $content-bg-color 100%
+    );
     background-repeat: no-repeat;
     background-size: 800px 104px;
 
@@ -20,7 +32,7 @@
       width: 32px;
       height: 32px;
       margin-right: 12px;
-      background: #E3E4EA;
+      background: #e3e4ea;
       border-radius: 50%;
     }
 
@@ -32,13 +44,13 @@
         width: 60%;
         height: 12px;
         margin-bottom: 8px;
-        background: #E3E4EA;
+        background: #e3e4ea;
       }
 
       .price {
         width: 100%;
         height: 12px;
-        background: #E3E4EA;
+        background: #e3e4ea;
       }
     }
 
@@ -47,7 +59,7 @@
       align-self: flex-end;
       width: 54px;
       height: 12px;
-      background: #EDEEF2;
+      background: #edeef2;
     }
 
     &:not(:last-child) {
@@ -57,6 +69,10 @@
 }
 
 @keyframes loadingShimmer {
-  0% { background-position: -468px 0; }
-  100% { background-position: 468px 0; }
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
 }
