--- a/src/renderer/account/components/TransactionsPanel/TransactionsLoading/TransactionsLoading.scss
+++ b/src/renderer/account/components/TransactionsPanel/TransactionsLoading/TransactionsLoading.scss
@@ -2,4 +2,7 @@
   padding: 20px;
   max-width: 316px;
   width: 100%;
+
+  pointer-events: none;
+  opacity: 0.65;
 }
